objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <description>new desc</description>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CustomerPriority__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Segment a</fullName>
                </value>
                <value>
                    <fullName>Business Segment b</fullName>
                </value>
                <value>
                    <fullName>Business Segment c</fullName>
                </value>
                <value>
                    <fullName>Business Segment d</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Segment_c__c</fullName>
        <label>Business_Segment__c</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Account_test_Jan_14__c</fullName>
        <label>CF Account test Jan 14</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_test1__c</fullName>
        <description>Description 1</description>
        <label>CF_test1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_test2__c</fullName>
        <label>CF_test2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_test3__c</fullName>
        <label>CF_test3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSTM_Field_1__c</fullName>
        <label>CSTM Field 1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSTM_Field_2__c</fullName>
        <label>CSTM Field 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coca_Cola__c</fullName>
        <label>Coca-Cola</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Administrator_Notes__c</fullName>
        <label>Commission_Administrator_Notes</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cont_Int_Text_1__c</fullName>
        <label>Cont Int Text 1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cont_Int_Text_2__c</fullName>
        <label>Cont Int Text 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cont_Int_Text_3__c</fullName>
        <label>Cont Int Text 3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <description>descp1</description>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intel_CF_for_translations__c</fullName>
        <label>Intel CF (for translations)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_status2__c</fullName>
        <label>Medicare status2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_status__c</fullName>
        <label>Medicare status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>status 1</fullName>
                </value>
                <value>
                    <fullName>staus 2</fullName>
                </value>
                <value>
                    <fullName>status 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Noor_test_CF1__c</fullName>
        <label>Noor test CF1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Noor_test_CF2__c</fullName>
        <label>Noor test CF2</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reusable_Promotion_1__c</fullName>
        <label>Reusable Promotion 1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Reusable_Promotion_2_1__c</fullName>
        <label>Reusable Promotion 2-1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reusable_Promotion_2_2__c</fullName>
        <label>Reusable Promotion 2-2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reusable_Promotion_2__c</fullName>
        <label>Reusable Promotion 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reusable_Promotion_3__c</fullName>
        <label>Reusable Promotion 3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <businessOwnerUser>{!Environment.Data_Class_1}</businessOwnerUser>
        <description>desc1</description>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SiemensPicklist_1__c</fullName>
        <label>SiemensPicklist 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
                <value>
                    <fullName>three</fullName>
                </value>
                <value>
                    <fullName>five</fullName>
                    <isActive>false</isActive>
                    <label>five</label>
                </value>
                <value>
                    <fullName>four</fullName>
                    <isActive>false</isActive>
                    <label>four</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SiemensPicklist_2__c</fullName>
        <label>SiemensPicklist 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>uno</fullName>
                </value>
                <value>
                    <fullName>dos</fullName>
                </value>
                <value>
                    <fullName>tres</fullName>
                </value>
                <value>
                    <fullName>cinco</fullName>
                    <isActive>false</isActive>
                    <label>cinco</label>
                </value>
                <value>
                    <fullName>cuatro</fullName>
                    <isActive>false</isActive>
                    <label>cuatro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <label>Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Active__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Date_1__c</fullName>
        <label>Test Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Email_1__c</fullName>
        <label>Test Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Test_Phone_1__c</fullName>
        <label>Test Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Test_Phone_2__c</fullName>
        <label>Test Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>destructive_test_1__c</fullName>
        <label>destructive test 1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field_for_FLS__c</fullName>
        <label>field for FLS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>one_more_field__c</fullName>
        <label>one more field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test_backend_March_31_1__c</fullName>
        <label>test backend March-31 #1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>test_backend_March_31_2__c</fullName>
        <label>test backend March-31 #2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>test_backend_March_31_3__c</fullName>
        <label>test backend March-31 #3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>test_vueling_BP_1__c</fullName>
        <description>new change 11,30</description>
        <label>test vueling BP 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>v14_phone__c</fullName>
        <label>v14 phone</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>ACC_RT_NT_1</fullName>
        <active>true</active>
        <label>ACC RT NT 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT_1</fullName>
        <active>false</active>
        <label>RT 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>SiemensRT1</fullName>
        <active>true</active>
        <label>SiemensRT1</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>